# mcp

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LICENSE  MIGRATING_TO_STRUCTLOG.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  TRIGGER_PHRASES.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  check-config.sh  clusters.yaml.example  debug-mcp-server.sh  install-macos-quick.sh  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml
demos/: ADVANCED_DEMOS.md  README.md  asciinema-config.json  demo-1-discovery.cast  demo-1-discovery.sh  demo-2-lifecycle.cast  demo-2-lifecycle.sh  demo-3-investigation.cast  demo-3-investigation.sh  demo-4-missing-delete.cast  demo-4-missing-delete.sh  demo-5-session-template.cast  demo-5-session-template.sh  demo-6-crash-recovery.cast  demo-6-crash-recovery.sh  demo-7-metrics-export.cast  demo-7-metrics-export.sh  demo-8-bulk-comparison.cast  demo-8-bulk-comparison.sh  hello-acp-workflow.py  hello-acp.cast  hello-acp.sh  record-all-advanced.sh
src/: index.ts
src/mcp_acp/: __init__.py  client.py  formatters.py  server.py  settings.py
tests/: __init__.py  test_client.py  test_formatters.py  test_security.py  test_server.py
tests/integration/: test_hello_acp.py
utils/: __init__.py
